--- a/website/contents.html
+++ b/website/contents.html
@@ -3,5 +3,7 @@
 		<center><u><H3> Contents </H3></u></center>
 		<a href="aboutme.html" target="showframe"> About </a> <br/>
 		<a href="proposal.html" target="showframe"> Proposal </a> <br/>
+		<a href="report.html" target="showframe"> Report </a> <br/>
 	</body>
 </html>
+
