--- a/website/index.html
+++ b/website/index.html
@@ -4,6 +4,6 @@
 	</head>
 	<frameset cols="10%, 90%">
 		<frame src="contents.html" />
-		<frame src="proposal.html" name="showframe" />
+		<frame src="report.html" name="showframe" />
 	</frameset>
 </html>
