--- a/website/contents.html
+++ b/website/contents.html
@@ -2,8 +2,9 @@
 	<body>
 		<center><u><H3> Contents </H3></u></center>
 		<a href="aboutme.html" target="showframe"> About </a> <br/>
-		<a href="proposal.html" target="showframe"> Proposal </a> <br/>
-		<a href="report.html" target="showframe"> Report </a> <br/>
+		<a href="Proposal.pdf" target="showframe"> Proposal </a> <br/>
+		<a href="Report.pdf" target="showframe"> Report </a> <br/>
+		<a href="Presentation.pdf" target="showframe"> Presentation </a> <br/>
 	</body>
 </html>
 
